feat: simplify configuration options
